# rust-file-mover

./: Cargo.toml  config.toml
src/: action.rs  cli.rs  config.rs  main.rs
