[package]

name = "rust-file-mover"
version = "0.0.1"
authors = ["Mattia Gheda <ghedamat@gmail.com>"]

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.docopt]
git = "https://github.com/docopt/docopt.rs"
[dependencies.docopt_macros]
git = "https://github.com/docopt/docopt.rs"
