[package]

name = "rust-file-mover"
version = "0.0.1"
authors = ["Mattia Gheda <ghedamat@gmail.com>"]

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.docopt]
git = "https://github.com/docopt/docopt.rs"
rev = "21ce1190ef7631f71e52de5e13eb4d131564b82e"
[dependencies.docopt_macros]
git = "https://github.com/docopt/docopt.rs"
rev = "21ce1190ef7631f71e52de5e13eb4d131564b82e"
